cmake_minimum_required(VERSION 3.20)
project(STFT)
add_library(stft STATIC)
target_sources(stft PRIVATE stft.cpp)
target_include_directories(stft PRIVATE stft.cpp)
# add_executable(stft_data stft_test.cpp stft.cpp stft.hpp)
# add_executable(stft_pgm stft_test.cpp stft.cpp stft.hpp)
# target_compile_definitions(stft_pgm PUBLIC PGM)
# add_executable(istft_test istft_test.cpp stft.cpp stft.hpp)
