cmake_minimum_required(VERSION 3.20)
project(STFT)
add_library(stft STATIC)
target_sources(stft PRIVATE stft.cpp)
add_executable(stft_data stft_test.cpp)
target_link_libraries(stft_data stft)
add_executable(stft_pgm stft_test.cpp)
target_compile_definitions(stft_pgm PUBLIC PGM)
target_link_libraries(stft_pgm stft)
add_executable(istft_test istft_test.cpp)
target_link_libraries(istft_test stft)
